Add automatic QR code generation for orders

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.45.0",
     "dotenv": "^17.2.1",
     "micro": "^10.0.1",
+    "qrcode": "^1.5.4",
     "square": "^37.0.0",
     "stripe": "^14.0.0"
   },
